--- a/index.html
+++ b/index.html
@@ -3,204 +3,238 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
-
+    <title>Furqan - Lifelong learner.</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+      body {
+        color: #293132;
+      }
+      section {
+        max-width: 700px;
+        margin: 0 auto;
+      }
+      h1, h2 {
+        color: #547AA5;
+        border-bottom: 1px solid #eaecef;
+        padding-bottom: 0.3em;
+      }
+      section > h1:first-of-type {
+        border-bottom: none;
+      }
+      header h1 {
+        border-bottom: none;
+        color: #293132;
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: normal;
+        font-weight: 600;
+        font-size: 2.2em;
+        margin-bottom: 10px;
+        position: relative;
+        display: inline-block;
+      }
+      header h1:after {
+        content: '';
+        position: absolute;
+        width: 60%;
+        height: 2px;
+        bottom: -5px;
+        left: 20%;
+        background: linear-gradient(to right, transparent, #50D8D7, transparent);
+      }
+      h1 {
+        font-size: 1.8em;
+      }
+      h2 {
+        font-size: 1.4em;
+        margin-top: 1.8em;
+      }
+      ul {
+        margin-bottom: 1.5em;
+      }
+      p {
+        text-align: justify;
+        line-height: 1.6;
+      }
+      header {
+        text-align: center;
+      }
+      a {
+        color: #547AA5;
+      }
+      a:hover {
+        color: #50D8D7;
+      }
+      .exp-title {
+        font-size: 1.1em;
+        color: #547AA5;
+        display: block;
+        margin-bottom: 0.4em;
+      }
+      .exp-detail {
+        margin-left: 1.2em;
+        color: #4F5165;
+        font-size: 0.98em;
+        margin-bottom: 0.8em;
+      }
+      .exp-detail li {
+        margin-bottom: 0.5em;
+        line-height: 1.5;
+      }
+      .edu-title {
+        font-weight: bold;
+        color: #547AA5;
+        margin-right: 0.5em;
+      }
+      .portfolio-list {
+        list-style: none;
+        padding-left: 0;
+      }
+      .portfolio-list li {
+        margin-bottom: 1em;
+        padding: 0.8em;
+        background: #f6f8fa;
+        border-left: 4px solid #547AA5;
+        border-radius: 3px;
+      }
+      .portfolio-list li a {
+        font-weight: bold;
+        color: #547AA5;
+        text-decoration: none;
+      }
+      .portfolio-list li a:hover {
+        color: #50D8D7;
+        text-decoration: underline;
+      }
+      header ul {
+        display: flex;
+        justify-content: center;
+        gap: 1em;
+      }
+      header ul li {
+        width: auto;
+        float: none;
+        border: none;
+        height: auto;
+      }
+      header ul a {
+        line-height: normal;
+        height: auto;
+        padding: 0;
+      }
+      .profile-pic {
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+        margin: 0 auto 15px auto;
+        display: block;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+        border: 3px solid #50D8D7;
+      }
+      .skills-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        margin-bottom: 20px;
+      }
+      .skill-tag {
+        background: rgba(80, 216, 215, 0.1);
+        border: 1px solid rgba(80, 216, 215, 0.3);
+        border-radius: 20px;
+        padding: 4px 10px;
+        font-size: 0.85em;
+        color: #474044;
+      }
+      @media (max-width: 600px) {
+        section {
+          padding: 0 0.8em;
+        }
+        section > h1:first-of-type {
+          margin-top: 1.5em;
+        }
+        header ul {
+          flex-direction: column;
+          align-items: center;
+        }
+        header ul li {
+          margin-bottom: 0.5em;
+        }
+        .skills-container {
+          justify-content: center;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Minimal</h1>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
-        <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
-        </ul>
+        <img src="profile.png" alt="Furqan" class="profile-pic">
+        <h1>Furqan</h1>
+        <p style="color: #4F5165;">"A passionate and adaptive lifelong learner, committed to continuous personal and professional development."</p>
       </header>
       <section>
-        <h1>GitHub Flavored Markdown</h1>
+        <h1>About Me</h1>
+        <p>
+          Tech-savvy research enthusiast with a background in IT support, web development, and digital content. Currently pursuing a Master's degree in Computer Science at Universitas Gadjah Mada with a research focus on Computer Vision. Adaptive, collaborative, and passionate about exploring emerging technologies to build impactful digital solutions.
+        </p>
 
-        <p><em>View the <a href="http://github.github.com/github-flavored-markdown/sample_content.html">source of this content</a>.</em></p>
+        <h2>Skills</h2>
+        <div class="skills-container">
+          <span class="skill-tag">Python</span>
+          <span class="skill-tag">PyTorch</span>
+          <span class="skill-tag">TensorFlow</span>
+          <span class="skill-tag">Detectron2</span>
+          <span class="skill-tag">Albumentations</span>
+          <span class="skill-tag">Arduino</span>
+          <span class="skill-tag">Laravel</span>
+          <span class="skill-tag">HTML/CSS</span>
+          <span class="skill-tag">JavaScript</span>
+        </div>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
-
-        <p>Roses are red<br>
-        Violets are blue</p>
-
-        <p>The next paragraph has the same phrases, but now they are separated by two spaces and a newline character:</p>
-
-        <p>Roses are red<br><br>
-        Violets are blue</p>
-
-        <p>Oh, and one thing I cannot stand is the mangling of words with multiple underscores in them like perform_complicated_task or do_this_and_do_that_and_another_thing.</p>
-
-        <h2>A bit of the GitHub spice</h2>
-
-        <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
-
+        <h2>Experience</h2>
         <ul>
-          <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
-          <li>User@SHA ref: <a href="https://github.com/mojombo/product/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo@<tt>be6a8cc</tt></a></li>
-          <li>User/Project@SHA: <a href="https://github.com/mojombo/god/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo/god@<tt>be6a8cc</tt></a></li>
-          <li>#Num: <a href="https://github.com/github/product/issues/1" class="issue-link" title="Baseline: What is up in the air right now?">#1</a></li>
-          <li>User/#Num: mojombo#1</li>
-          <li>User/Project#Num: <a href="https://github.com/mojombo/god/issues/1" class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
+          <li>
+            <span class="exp-title"><strong>Jul 2024 - Sekarang</strong><br>Edufio — Freelance Tutor</span>
+            <ul class="exp-detail">
+              <li>Taught basic web development (HTML, CSS, JavaScript) to beginner and intermediate students through online sessions.</li>
+              <li>Guided elementary school students in understanding programming logic using Scratch through an interactive and engaging approach.</li>
+              <li>Designed lesson materials and practical modules tailored to each student's ability, applying a personalized learning method.</li>
+              <li>Conducted regular evaluations and provided constructive feedback to parents or guardians.</li>
+            </ul>
+          </li>
+          <li>
+            <span class="exp-title"><strong>Jul 2023 - 2024</strong><br>SDI Al Azhar 21 — IT Support</span>
+            <ul class="exp-detail">
+              <li>Performed maintenance and troubleshooting of computer systems to ensure smooth daily operations.</li>
+              <li>Managed network stability and internet availability across the organization.</li>
+              <li>Maintained peripheral devices such as printers, projectors, and photocopiers.</li>
+              <li>Conducted routine hardware and software maintenance to prevent disruptions and maintain optimal system performance.</li>
+            </ul>
+          </li>
         </ul>
 
-        <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
-
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p>
-
-        <h2>Math is hard, let's go shopping</h2>
-
-        <p>In first grade I learned that 5 &gt; 3 and 2 &lt; 7. Maybe some arrows. 1 -&gt; 2 -&gt; 3. 9 &lt;- 8 &lt;- 7.</p>
-
-        <p>Triangles man! a^2 + b^2 = c^2</p>
-
-        <h2>We all like making lists</h2>
-
-        <p>The above header should be an H2 tag. Now, for a list of fruits:</p>
-
+        <h2>Education</h2>
         <ul>
-          <li>Red Apples</li>
-          <li>Purple Grapes</li>
-          <li>Green Kiwifruits</li>
+          <li>
+            <span class="edu-title">2024 – Present</span><br>Master of Computer Science, Universitas Gadjah Mada.<br>
+          </li>
+          <li>
+            <span class="edu-title">2016 - 2020</span><br>Bachelor of Computer Engineering, Universitas Teknologi Yogyakarta.<br>
+          </li>
         </ul>
 
-        <p>Let's get crazy:</p>
-
-        <ol>
-          <li>
-            <p>This is a list item with two paragraphs. Lorem ipsum dolor<br>
-            sit amet, consectetuer adipiscing elit. Aliquam hendrerit<br>
-            mi posuere lectus.</p>
-
-            <p>Vestibulum enim wisi, viverra nec, fringilla in, laoreet<br>
-            vitae, risus. Donec sit amet nisl. Aliquam semper ipsum<br>
-            sit amet velit.</p>
-          </li>
-          <li><p>Suspendisse id sem consectetuer libero luctus adipiscing.</p></li>
-        </ol>
-
-        <p>What about some code <strong>in</strong> a list? That's insane, right?</p>
-
-        <ol>
-          <li>
-            <p>In Ruby you can map like this:</p>
-
-            <pre><code>['a', 'b'].map { |x| x.uppercase }</code></pre>
-          </li>
-          <li>
-            <p>In Rails, you can do a shortcut:</p>
-
-            <pre><code>['a', 'b'].map(&amp;:uppercase)</code></pre>
-          </li>
-        </ol>
-
-        <p>Some people seem to like definition lists</p>
-
-        <dl>
-          <dt>Lower cost</dt>
-          <dd>The new version of this product costs significantly less than the previous one!</dd>
-          <dt>Easier to use</dt>
-          <dd>We've changed the product so that it's much easier to use!</dd>
-        </dl>
-
-        <h2>I am a robot</h2>
-
-        <p>Maybe you want to print <code>robot</code> to the console 1000 times. Why not?</p>
-
-        <pre><code>def robot_invasion
-  puts("robot " * 1000)
-end
-</code></pre>
-
-        <p>You see, that was formatted as code because it's been indented by four spaces.</p>
-
-        <p>How about we throw some angle braces and ampersands in there?</p>
-
-        <pre><code>&lt;div class="footer"&gt;
-    &amp;copy; 2004 Foo Corporation
-&lt;/div&gt;
-</code></pre>
-
-        <h2>Set in stone</h2>
-
-        <p>Preformatted blocks are useful for ASCII art:</p>
-
-        <pre>             ,-.
-    ,     ,-.   ,-.
-   / \   (   )-(   )
-   \ |  ,.&gt;-(   )-&lt;
-    \|,' (   )-(   )
-     Y ___`-'   `-'
-     |/__/   `-'
-     |
-     |
-     |    -hrr-
-  ___|_____________
-</pre>
-
-        <h2>Playing the blame game</h2>
-
-        <p>If you need to blame someone, the best way to do so is by quoting them:</p>
-
-        <blockquote>
-        <p>I, at any rate, am convinced that He does not throw dice.</p>
-        </blockquote>
-
-        <p>Or perhaps someone a little less eloquent:</p>
-
-        <blockquote>
-        <p>I wish you'd have given me this written question ahead of time so I<br>
-        could plan for it... I'm sure something will pop into my head here in<br>
-        the midst of this press conference, with all the pressure of trying to<br>
-        come up with answer, but it hadn't yet...</p>
-
-        <p>I don't want to sound like<br>
-        I have made no mistakes. I'm confident I have. I just haven't - you<br>
-        just put me under the spot here, and maybe I'm not as quick on my feet<br>
-        as I should be in coming up with one.</p>
-        </blockquote>
-
-        <h2>Table for two</h2>
-
-        <table>
-          <tbody>
-        <tr>
-            <th>ID</th>
-        <th>Name</th>
-        <th>Rank</th>
-          </tr>
-          <tr>
-            <td>1</td>
-        <td>Tom Preston-Werner</td>
-        <td>Awesome</td>
-          </tr>
-          <tr>
-            <td>2</td>
-        <td>Albert Einstein</td>
-        <td>Nearly as awesome</td>
-          </tr>
-        </tbody>
-        </table>
-
-        <h2>Crazy linking action</h2>
-
-        <p>I get 10 times more traffic from <a href="http://google.com/" title="Google">Google</a> than from<br>
-        <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
+        <h2>Code & Craft</h2>
+        <ul class="portfolio-list">
+          <li><a href="#">Colon Polyp Detection in Colonoscopy Images Based on Improved DiffusionDet</a><br>Enhanced colon polyp detection by integrating ICIoU loss and Swin Transformer-Tiny into DiffusionDet, achieving significant improvements in localization accuracy on the Kvasir dataset.</li>
+          <li><a href="#">Design and Development of an Internet of Things (IoT)-based Noise Level Monitoring System</a><br>IoT noise level monitoring system using Arduino and sound sensor for real-time environmental data tracking.</li>
+          <li><a href="#">Design and Development of an E-Learning Platform for Introducing Programming with Scratch and Python to Children</a><br>Development of a Laravel-based e-learning platform that introduces children to programming by combining the visual creativity of Scratch with the logical foundations of Python in an interactive environment.
+        </ul>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
